--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
                 </br>Bonjour! Je suis Clément HORESH — Étudiant à Rennes School of Business, résident à Cesson-Sévigné.</br>
                 Actuellement, je suis stagiaire chez <a class="url" href="https://www.groupeonepoint.com/fr/" alt="onepoint" target="_blank">onepoint</a> en tant que Associate Web marketing, où je prépare la présence de KiNeXo au congrès national des experts-comptables.
                 </br></br>Passionné de Tech, design, code, crypto & IT, je suis activement à la recherche d'une alternance qui pourra coupler passion et apprentissage. <a class="url" href="files/perso/Alternance.pdf" alt="Informations alternance" target="_blank">+ d'infos</a>
-                </br></br><a class="url" href="#" alt="À propos" target="_blank">À propos de moi / contact</a>
+                </br></br><a class="url" href="#" alt="À propos" target="_blank">Contact</a>
             </p>
             <picture>
-                <img style="border-radius: 1rem; height: 520px" src="pictures/1_intro/profile.webp" alt="profile">
+                <img style="border-radius: 1rem; max-height: 520px; max-width: 450.81px; width: 100%;" src="pictures/1_intro/profile.webp" alt="profile">
             </picture>
         </div>
     </div>
@@ -134,12 +134,13 @@
         </h2>
     </div>
     <div class="block_pro_type1">
-        <div class="block_pro_bgcontainer">
-           <div class="block_pro_mask">
-                <div class="styles_bg__2xoRM"></div>
+        <div class="block_pro_bgcontainer" >
+           <div class="block_pro_mask" >
+                <div class="styles_bg__2xoRM" >
                 </div>
+            </div>
         </div>
-        <div class="block_pro_work">
+        <div class="block_pro_work" >
            <div class="block_pro_wraper">
               <div class="block_pro_header">
                  <div class="block_pro_title">
@@ -162,7 +163,7 @@
         
         <div class="things_things__tkv53" style="margin-bottom: 15rem;">
             <h4>Langues</h4>
-            <p style="margin-block-end: 4rem">Francais — Langue Maternelle</br>
+            <p style="margin-block-end: 4rem; color: rgb(151, 151, 160);">Francais — Langue Maternelle</br>
             Anglais — Niveau B2/C1</br>
             Allemand — Niveau A2</br>
             Coréen — Débutant</p>
@@ -172,7 +173,7 @@
                      <h4>Python</h4>
                      <div class="things_arrow_shape__WA4SM"><img src="font/icon/Arrow-right.svg" class="things_arrow__fPsjB"></div>
                   </div>
-                  <p>Create playlists for your audiobooks on iCloud.</p>
+                  <p>Panda, Numpy, matplotlib, data manipulation, data grabbing. Machine learning en apprentissage (regression, classification, clustering).</p>
                </div>
             </a>
             <a href="/things/gameboy/" alt="Gameboy games screenshots">
@@ -181,7 +182,7 @@
                      <h4>Front-End</h4>
                      <div class="things_arrow_shape__WA4SM"><img src="font/icon/Arrow-right.svg" class="things_arrow__fPsjB"></div>
                   </div>
-                  <p>Some screenshots of official releases.</p>
+                  <p>Création de differents projets: ECS Web, Life Beyond, CV 1 & 2, Bretagne Conseil. Code principalement en HTML/CSS/Java.</p>
                </div>
             </a>
             <a href="/things/podcast/" alt="Podcast &quot;And Designer&quot;">
@@ -190,7 +191,7 @@
                      <h4>Suite Adobe</h4>
                      <div class="things_arrow_shape__WA4SM"><img src="font/icon/Arrow-right.svg" class="things_arrow__fPsjB"></div>
                   </div>
-                  <p>Explore different aspects of design, technology and business through the lenses of a product designer.</p>
+                  <p>Utilisation pour l'instant limitée à des projets personnels, habilité avec XD, Illustrator et maîtrise plus particulière de Photoshop</p>
                </div>
             </a>
             <a href="https://standart.io/" alt="Standartio Icons">
@@ -199,7 +200,7 @@
                      <h4>Office & Suite Apple</h4>
                      <div class="things_arrow_shape__WA4SM"><img src="font/icon/Arrow-right.svg" class="things_arrow__fPsjB"></div>
                   </div>
-                  <p>Meticulously-made icons. Free and open source.</p>
+                  <p>Maîtrise de ces suites dans leur utilisation basique. Connaissances plus poussés en Excel avec par exemple l'utilisation de Pivot Table ou Solver.</p>
                </div>
             </a>
             <a href="https://standart.io/" alt="Standartio Icons">
@@ -221,9 +222,10 @@
         <a class="url" href="https://stepn.com" alt="StepN" target="_blank">StepN</a></br>
         <a class="url" href="https://www.ledger.com" alt="Ledger" target="_blank">Ledger</a></br>
         <a class="url" href="https://ilyakolganov.com/" alt="Ilya Kolganov" target="_blank">Ilya Kolganov</a></br>
-        <a class="url" href="#" alt="À propos" target="_blank">Création d'entreprise</a></br>
         <a class="url" href="https://www.pentagram.com" alt="Pentagram" target="_blank">Pentagram</a></br>
-        <a class="url" href="#" alt="À propos" target="_blank">Musique electronique</a>
+        <!--<a class="url" href="#" alt="À propos" target="_blank">Création d'entreprise</a></br>
+        
+        <a class="url" href="#" alt="À propos" target="_blank">Musique electronique</a>-->
     </div>
     <div class="content" style="padding-bottom: 3rem;"><p>Ce site à été mis à jours le 16 mai 2022, il n'a aucun cookie et ne récolte aucune donnée. </p></div>
 </body>
