--- a/frontend.html
+++ b/frontend.html
@@ -14,10 +14,13 @@
      <div class="jsx-73e20a402472b771 arrowShape" onclick="location.href='index.html';"><img src="font/icon/Arrow-right.svg" class="jsx-73e20a402472b771 arrow"></div>
    <div class="content">
       <H1>Front-end/ Wordpress</H1>
+      <p style="max-width:450px; width:100%;">Dans le début de mon adolescence, attiré par la Tech et ce qu'elle pouvait nous apporter, j'ai décidé de faire le premier pas vers le monde du dev. Le Front-end a été mon ouverture vers cet univers que j'ai continué d'explorer jusqu'a aujourd'hui. Récemment, j'ai eu l'occasion d'expérimenter WordPress à l'occasion de la refonte du site de Bretagne Conseil (notamment les modules tels que Elementor, Mailchimp, etc..).</p>
+
       <h2>Mes dernières réalisations :</h2>
       <h4>Front-End</h4>
       <a class="url"  href="https://clement-horesh.github.io/curriculum_vitae/" style="font-size: 16px; font-weight: 500;" alt="Curriculum Vitae" target="_blank">Curriculum Vitae v1</a></br>
-      <a class="url"  href="https://clement-horesh.github.io/ecsweb/" style="font-size: 16px; font-weight: 500;" alt="ECS web" target="_blank">ECS Web</a></br></br>
+      <a class="url"  href="https://clement-horesh.github.io/ecsweb/" style="font-size: 16px; font-weight: 500;" alt="ECS web" target="_blank">ECS Web</a>
+      <p>en cours de réalisation: <a class="url"  href="https://clement-horesh.github.io/Life-Beyond/" style="font-size: 16px; font-weight: 500;" alt="Life Beyond" target="_blank">Life Beyond</a></p></br>
       <h4>Wordpress</h4>
       <p>Bretagne Conseil — (Ma version n'a pas été déployée, se referer aux photos dans la rubrique "mes experiences"</p>
    </div>
