--- a/experiences.html
+++ b/experiences.html
@@ -21,11 +21,11 @@
            <div class="block_pro_wraper">
               <div class="block_pro_header">
                  <div class="block_pro_title">
-                    <p>2019 — 2021</p>
-                    <h2>Lycée Michel de Montaigne</h2>
+                    <p>Août 2020</p>
+                    <h2>Espaces verts</h2>
                  </div>
                  <p class="block_pro_description">
-                    Classe Préparatoire aux Grandes Écoles (CPGE) économique et commerciale, option scientifique (ECS).
+                    Entretien des espaces verts du centre ville de Colmar. Experience de 1 mois qui s'inscrit dans la dynamique de Colmar de vouloir faire travailler ses jeunes.
                 </p>
               </div>
            </div>
@@ -41,17 +41,17 @@
            <div class="block_pro_wraper">
               <div class="block_pro_header">
                  <div class="block_pro_title">
-                    <p>2018 — 2019</p>
-                    <h2>Lycée Louis Couffignal</h2>
+                    <p>Août 2019</p>
+                    <h2>Manutention</h2>
                  </div>
                  <p class="block_pro_description">
-                  Classe Préparatoire aux Grandes Écoles (CPGE) Physique Technologie & Science de l'Ingenieur (PTSI).
+                  Travaux de manutention dans l’optique d’automatiser la gestion des stocks d'une pharmacie à Rixheim.
                 </p>
               </div>
            </div>
         </div>
     </div>
-    <div class="block_pro_type1" >
+    <div class="block_pro_type1"style="padding-bottom: 0; margin-bottom: 0;" >
       <div class="block_pro_bgcontainer" >
          <div class="block_pro_mask" >
 
@@ -61,16 +61,36 @@
          <div class="block_pro_wraper">
             <div class="block_pro_header">
                <div class="block_pro_title">
-                  <p>2015 — 2018</p>
-                  <h2>Lycée Auguste Bartholdi</h2>
+                  <p>Juillet - Août 2019</p>
+                  <h2>Gestion d’un site de e- commerce</h2>
                </div>
                <p class="block_pro_description">
-                Obtention d'un baccalauréat scientifique option Science de la Vie et de la Terre.
+                  Préparation des commandes, ajout de nouveaux articles et optimisation de l’interface pour Futur Home Shop.
               </p>
             </div>
          </div>
       </div>
   </div>
+  <div class="block_pro_type1" >
+   <div class="block_pro_bgcontainer" >
+      <div class="block_pro_mask" >
+
+       </div>
+   </div>
+   <div class="block_pro_work" >
+      <div class="block_pro_wraper">
+         <div class="block_pro_header">
+            <div class="block_pro_title">
+               <p>2015 - 1 semaine</p>
+               <h2>Stage en entreprise</h2>
+            </div>
+            <p class="block_pro_description">
+               Stage de 3ème chez Henninger SAS (BTP) à Rouffach.
+           </p>
+         </div>
+      </div>
+   </div>
+</div>
 </div>
 
 </body>
