--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <div class="content">
         <div class="header_intro">
             <p ><span style="font-weight: 700;">Curriculum Vitae</span>
-                </br>Bonjour! Je suis Clément HORESH — Étudiant à Rennes School of Business, résident à Cesson-Sévigné.</br>
-                Actuellement, je suis stagiaire chez <a class="url" href="https://www.groupeonepoint.com/fr/" alt="onepoint" >onepoint</a> en tant que Associate Web marketing, où je prépare la présence de KiNeXo au congrès national des experts-comptables.
+                </br>Bonjour ! Je suis Clément HORESH — Étudiant à Rennes School of Business en PGE1 Cybersecurity & Tech.</br>
+                Actuellement stagiaire chez <a class="url" href="https://www.groupeonepoint.com/fr/" alt="onepoint" >onepoint</a> en tant que Associate Web marketing, je prépare la présence de KiNeXo au congrès national des experts-comptables.
                 </br></br>Passionné de Tech, design, code, crypto & IT, je suis activement à la recherche d'une alternance qui pourra coupler passion et apprentissage. <a class="url" href="files/perso/Alternance.pdf" alt="Informations alternance" >+ d'infos</a>
                 </br></br><a class="url" href="contact.html" alt="À propos" >Contact</a>
             </p>
@@ -47,7 +47,7 @@
                         <h2>Onepoint</h2>
                     </div>
                     <p class="block_pro_description">
-                        La position de Associate en Marketing digital chez onepoint m'as permis de faire mes marques au sein d'une entreprise de grande taille et de développer mes compétences en SEO, Email campaigns, Ads, Figma, Loom, Workplace… J'ai eu l'occasion de collaborer avec les products managers pour construire la communication digitale de KineXo pour la  prochaine édition du Congrès de l’Ordre des Experts-Comptables.
+                        La position de Associate en Marketing digital chez onepoint me permet de faire mes marques au sein d'une entreprise de grande taille et de développer mes compétences en SEO, Email campaigns, Ads, Figma, Loom, Workplace. J'ai l'occasion de collaborer avec les products managers pour construire la communication digitale de KineXo pour la prochaine édition du Congrès de l’Ordre des Experts-Comptables.
                     </p>
                 </div>
             </div>
@@ -87,7 +87,7 @@
                     <h2>Bretagne Conseil</h2>
                  </div>
                  <p class="block_pro_description">
-                    Mon expérience Junior-Entreprise a été partagée avec celle de <a class="url" href="https://www.linkedin.com/in/perrine-le-boëdec/" alt="Perrine" >Perrine Le Boëdec</a> dans le pôle communication. Notre mission a été de faire rayonner l'association par sa communication: envers nos partenaires, clients et l'école. Cette période a été une réelle ouverture sur le travail d'équipe & un éveil de mes compétences. L'une de mes dernières missions a été de refaire le <a class="url"  href="https://www.bretagne-conseil.fr" style="font-size: 20px; font-weight: 500;" alt="Bretagne Conseil website" >site internet</a> (pas encore publié). 
+                    Mon expérience Junior-Entreprise a été partagée avec celle de <a class="url" href="https://www.linkedin.com/in/perrine-le-boëdec/" alt="Perrine" >Perrine Le Boëdec</a> dans le pôle communication. Notre mission consistait à faire rayonner l'association par sa communication envers nos partenaires, clients et l'école. Cette période m'a apporté une réelle ouverture sur le travail d'équipe & un éveil de mes compétences. L'une de mes dernières missions consistait à refaire le <a class="url"  href="https://www.bretagne-conseil.fr" style="font-size: 20px; font-weight: 500;" alt="Bretagne Conseil website" >site internet</a> (pas encore publié). 
                  </p>
               </div>
            </div>
@@ -156,7 +156,7 @@
     </div>
     <!--COMPETENCES-->
     <div class="content" style="padding-bottom: 0;">
-        <h2 style="font-size:24px; margin-bottom: 4rem;">Mes competences <?xml version="1.0" encoding="iso-8859-1"?>
+        <h2 style="font-size:24px; margin-bottom: 4rem;">Mes compétences <?xml version="1.0" encoding="iso-8859-1"?>
             <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" height="15px" fill="var(--svg)" viewBox="0 0 490 490" style="enable-background:new 0 0 490 490;" xml:space="preserve"><g><path d="M52.8,311.3c-12.8-12.8-12.8-33.4,0-46.2c6.4-6.4,14.7-9.6,23.1-9.6s16.7,3.2,23.1,9.6l113.4,113.4V32.7c0-18,14.6-32.7,32.7-32.7c18,0,32.7,14.6,32.7,32.7v345.8L391,265.1c12.8-12.8,33.4-12.8,46.2,0c12.8,12.8,12.8,33.4,0,46.2L268.1,480.4c-6.1,6.1-14.4,9.6-23.1,9.6c-8.7,0-17-3.4-23.1-9.6L52.8,311.3z"/>
             </svg>
         </h2 >
@@ -166,7 +166,7 @@
 
                      <h4>Langues</h4>
                      
-                  <p>Français — Langue aternelle</br>
+                  <p>Français — Langue maternelle</br>
                     Anglais — Niveau B2/C1</br>
                     Allemand — Niveau A2</br>
                     Coréen — Débutant</p>
@@ -223,7 +223,7 @@
     </div>
     <!--CENTRES D'INTERET-->
     <div class="content" style="padding-bottom: 14rem;">
-        <h2 style="font-size:24px; margin-bottom: 4rem;">Interets <?xml version="1.0" encoding="iso-8859-1"?>
+        <h2 style="font-size:24px; margin-bottom: 4rem;">Intérêts <?xml version="1.0" encoding="iso-8859-1"?>
             <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" height="15px" fill="var(--svg)" viewBox="0 0 490 490" style="enable-background:new 0 0 490 490;" xml:space="preserve"><g><path d="M52.8,311.3c-12.8-12.8-12.8-33.4,0-46.2c6.4-6.4,14.7-9.6,23.1-9.6s16.7,3.2,23.1,9.6l113.4,113.4V32.7c0-18,14.6-32.7,32.7-32.7c18,0,32.7,14.6,32.7,32.7v345.8L391,265.1c12.8-12.8,33.4-12.8,46.2,0c12.8,12.8,12.8,33.4,0,46.2L268.1,480.4c-6.1,6.1-14.4,9.6-23.1,9.6c-8.7,0-17-3.4-23.1-9.6L52.8,311.3z"/>
             </svg>
         </h2 >
@@ -235,6 +235,6 @@
         
         <a class="url" href="#" alt="À propos" >Musique electronique</a>-->
     </div>
-    <div class="content" style="padding-bottom: 3rem;"><p>Ce site à été mis à jours le 16 mai 2022, il n'a aucun cookie et ne récolte aucune donnée. </p></div>
+    <div class="content" style="padding-bottom: 3rem;"><p>Ce site à été mis à jour le 23 mai 2022, il n'a aucun cookie et ne récolte aucune donnée. </p></div>
 </body>
 </html>
