--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <p ><span style="font-weight: 700;">Curriculum Vitae</span>
                 </br>Bonjour ! Je suis Clément HORESH — Étudiant à Rennes School of Business en PGE1 Cybersecurity & Tech.</br>
                 Actuellement stagiaire chez <a class="url" href="https://www.groupeonepoint.com/fr/" alt="onepoint" >onepoint</a> en tant que Associate Web marketing, je prépare la présence de KiNeXo au congrès national des experts-comptables.
-                </br></br>Passionné de Tech, design, code, crypto & IT, je suis activement à la recherche d'une alternance qui pourra coupler passion et apprentissage. <a class="url" href="files/perso/Alternance.pdf" alt="Informations alternance" >+ d'infos</a>
+                </br></br>Passionné de Tech, design, code, crypto & IT, je suis activement à la recherche d'une alternance qui pourra coupler passion et apprentissage.
                 </br></br><a class="url" href="contact.html" alt="À propos" >Contact</a>
             </p>
             <picture>
